# flowgpt-multi-platform-bot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.py
src/api/: webhooks.py
src/core/: chat_client.py  config.py
src/services/discord/: bot.py
src/services/line/: bot.py
src/services/slack/: bot.py
src/services/telegram/: bot.py
